# blitzcrank

./: CMakeLists.txt  README.md  package.xml  setup.py
AR_marker_models/marker0/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker1/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker10/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker11/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker12/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker13/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker14/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker15/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker16/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker17/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker2/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker3/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker4/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker5/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker6/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker7/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker8/: model-1_4.sdf  model-1_5.sdf  model.sdf
AR_marker_models/marker9/: model-1_4.sdf  model-1_5.sdf  model.sdf
bundles/: end-effector.xml  target.xml
config/: static_transforms.yaml
launch/: add-collision-object.launch  ar-track.launch  astra-cube.launch  gazebo-vertical-setup-ar-track.launch  horizontal-approach-target.launch  joint-trajectory-control.launch  kinova-bringup.launch  kinova-moveit-demo.launch  loc-object-grasp-sm.launch  object-grasp.launch  pregrasp-service.launch  tutorial.launch  vertical-approach-target.launch  vertical-setup-ar-track.launch  visual-servoing.launch  vs-object-grasp-sm.launch
src/: add_collision_object.cpp  allow_object_collision.py  ar_track_republish.cpp  gazebo_interface.cpp  horizontal_approach_target.cpp  joint_control.cpp  joint_trajectory_control.cpp  object_grasp_sm.py  object_grasp_sm_service.py  object_grasp_states.py  object_localizer_republish.cpp  planning_scene.cpp  pregrasp_service.cpp  static_transform_publisher.cpp  test_tf_broadcaster.cpp  transform_republish.cpp  vertical_approach_marker.cpp  vertical_approach_target.cpp  vertical_planning_scene.cpp  visual_servoing.cpp  vs_object_grasp_sm.py  vs_object_grasp_states.py
srv/: AddCollisionObjects.srv  GetTargetAlignment.srv  SetCameraOffset.srv
