<?xml version="1.0"?>
<package format="2">
  <name>blitzcrank</name>
  <version>0.1.0</version>
  <description>The blitzcrank package</description>

  <maintainer email="95joaopereira@gmail.com">Joao Pereira</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>interactive_markers</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>
