<?xml version="1.0"?>
<package format="2">
  <name>kinova_manipulation</name>
  <version>0.1.0</version>
  <description>The kinova_manipulation package</description>

  <maintainer email="95joaopereira@gmail.com">Joao Pereira</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>darknet_ros_py</depend>
  <depend>kinova_msgs</depend>
  <depend>mbot_perception_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>message_generation</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>interactive_markers</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>smach</depend>

</package>
